Fixed the bug where the pages were slightly larger than the screen resulting in a horizontal scroll bar under the page.

--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,7 @@ header #contact-info .phone-icon {
 }
 
 .contact-page {
-    width: 100vw;
+    width: 100%;
     height: 87vh;
     background-color: white;
 }
