--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    width: 100vw;
+    width: 100%;
     padding: 30px;
     color: white;
 }
@@ -75,7 +75,7 @@ header .phone-number {
 }
 
 .fullScreen {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 }
 
@@ -179,4 +179,9 @@ footer ul li {
 .icon-medium {
     width: 15%;
     height: auto;
+}
+
+.remove-link-decoration {    
+    text-decoration: none;
+    color: white;
 }
